--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,14 @@
   },
   "extends": ["airbnb", "plugin:react/recommended", "plugin:react-hooks/recommended"],
   "plugins": ["react"],
+  "settings": {
+    "import/resolver": {
+      "alias": {
+        "map": [["axios", "axios"]],
+        "extensions": [".ts", ".js",".jsx", ".json"]
+      }
+    }
+  },
   "rules": {
     "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
     "react/react-in-jsx-scope": "off",
